--- a/calc.html
+++ b/calc.html
@@ -6,7 +6,7 @@
 <script>
 
 function testDv (form) {
-    var isp2 = form.isp.value*9.82;
+    var isp2 = form.isp.value*9.80665002864;
     var fullmass2 = form.fullmass.value;
     var drymass2 = form.drymass.value;
     var logmass2 = Math.log(fullmass2/drymass2)
